css/style.css
body {
    color: #333;
    height: 100%;
    display: flex;
    flex-direction: column;
    font-family: "Roboto", sans-serif;
}

.container {
    max-width: 1600px;
    margin: 0 auto;
    /* padding: 20px; */
}


#main > div {
    margin-bottom: 20px;
    position: relative;
}

h1, h2, h3, h4, h5, h6, p, a, div, article,textarea, td {
	font-family: "Roboto", sans-serif;
	
}

a{
	color:var(--font-color) ;
	text-decoration: underline;
}



h1{font-size:28px}
h2{font-size:24px}
h3{font-size:20px}
h4{font-size:17px}
h5{font-size:14px}
li{font-size:14px}
a{font-size:inherit}
p{font-size:14px}
span{font-size:14px}
span{font-size:14px}
div{font-size:14px}

button{
	width:unset;
}
article,textarea{
 margin:10px;
 padding:10px !important;
 overflow:auto; 
 font-size:18px !important;
 color:var(--color);
 background-color:var(--background-color); 
 
 @media   (prefers-color-scheme: light) {
 	border-color:white;

	
 }
 border-radius:0px;
 
 
 
 
}


.light-img{
	display:block;
	margin-left:5px;
	margin-right:5px;
}
.dark-img{
	display:none;
	margin-left:5px;
	margin-right:5px;
}
	

pre {
    white-space: pre-wrap;       /* Since CSS 2.1 */
    white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
    white-space: -pre-wrap;      /* Opera 4-6 */
    white-space: -o-pre-wrap;    /* Opera 7 */
    word-wrap: break-word;       /* Internet Explorer 5.5+ */
}


details[role=list] summary:not([role]) {
	background-color:unset;
}
nav li{
	padding:0px;
}
nav button{
	padding:0px;
	line-height:12px;
	
}
nav ul{
	margin-left:10px !important;
	margin-right:10px !important;
}

summary{
	color:var(--color) !important;
}
footer span{
	font-size:12px;
}
ul[role=listbox]{
	font-size:12px !important;
}

.CodeMirror {
	/* font-family: Arial, monospace !important;  */
	font-size: 18px !important; 
    border-radius: 5px !important;
	border: 0.5px solid #33302a;
	margin:10px;
	height: auto !important;
	min-height:50px !important;
	padding:0px !important;
}

.output-block{
	border-radius: 5px!important;
    border: 1px solid #f3f1ee1e;

}

.CodeMirror-gutter {
	background-color: #fffade;
}

.CodeMirror-linenumber {
	color: #a69d8d;
}

.CodeMirror-sizer{
	margin-top:30px!important;
}

@media (prefers-color-scheme:light) {
.CodeMirror{
		border: 0.5px solid #ddd;
		}
	}
.CodeMirror-scroll{
  margin-right:5px !important;
}

.CodeMirror-cursor {
  border-left: 1px solid white;
  border-right: 1px solid black;
}

.cm-editor { height: 100% }
.cm-scroller { overflow: auto }

.CodeMirror-sizer{
	border-right:unset !important;
}
.error{
	color:red;
}

.status{
	width:29px;
	float:left;
	margin:0px;
	font-size:12px;
	display:inline;
	position:realtive;
	bottom:0px;
	right:0px;
}
.output{
	float:left;
	margin-left:10px;
	margin-right:10px;
	display:inline;
	flex-grow:1;
}

.cell-menu{
	float:right;
	margin-bottom:-15px;
	height:15px;
	font-size:12px;
	z-index:100;
	position:relative;
	top:5px;
	right:0px;
	margin-right:15px;
	color:darkgray ;
	
}

.cell-menu a{
	color: var(--font-color);
	margin:5px;
	font-size:18px;
	text-decoration: none !important;
}

.cell-menu a i {
	text-decoration: none !important;
  }
  

.cell-menu select{

	color: var(--font-color);
	margin:5px;
	font-size:14px !important;
}

#git-stars{
	margin-top: 5px;
	height:30px;
}

#logo{
	height:37px;
	width:35px;
	margin:0px;
}
input{
	font-size:18px;
	padding:5px !important;
	line-height:20px;
}

.file-delete{
	color:red;
}
.update-time{
	font-size:12px;
}

#footer{
	padding: 12px 0;
	text-align: center;
	border-top: 1px solid #ddd;
	font-size: 14px;
	color: #555;
	background: #f9f9f9;
}

.header-button{
	margin:0px;
	padding:2px;
	text-decoration: none!important;
	color: #333;
}

@media (prefers-color-scheme: light) {
	.git-modal article {
	  background-color: #fff;
	  color: #333;
	}
  
	.git-modal .form-group label {
	  color: #333 !important;
	}
  
	.git-modal input {
	  background-color: #fff;
	  color: #000;
	  border: 1px solid #ccc;
	}
  
	.git-modal .button-row .primary {
	  background: #fede02 !important;
	  color: #000;
	}

	.git-modal .button-row .secondary {
	  background: transparent;
	  color: #333;
	  border: 1px solid #333;
	}
  
	.git-modal .publish-link a {
	  color: #333;
	}
  
	.git-modal .modal-footer {
	  color: #555;
	}
  }

@media (max-width: 600px) {
   #welcome{
   	display:none;
   }
  .cell-menu {
    margin: 5px;
    float: unset;
    position: unset;
    top: unset;
    right: unset;
    height:unset;
    display:flex;
	justify-content: center;
	align-items: center;
    }
    .cell-menu a{

	color:unset;
	margin:10px;
	font-size:24px;
	text-decoration: none!important;
	
	}
	.cell-menu a i{
		text-decoration: none!important;
	}

    .cell-menu span{
	
	margin:10px;
	font-size:16px;
	
	}

    .container{
    	padding:3px;
    }
    
    .CodeMirror,article,textarea{
    	margin:5px;
    	padding:5px;
    }
    
    details[role=list] summary::after {
    	display:none
    }
    
}

nav details[role=list] summary{
	padding-top:2px !important;
	padding-bottom:2px !important;
	border:none !important;
	font-size:14px !important;
	line-height:33px !important;
	font-weight:500;
}

nav details[role=list] summary:hover{
	color:#fede02 !important;
}
nav details[role=list]{

	border:none !important;
}

details[role=list] summary::after{
	height:33px;
	line-height:5px;
	font-size:5px;
}

nav [role=button]{
	padding-top:2px !important;
	padding-bottom:2px !important;
}

h1, h2, h3, h4, h5, h6, p, a, li, ul,ol {
	--typography-spacing-vertical:0px !important;
}


.cell-type{
    color:var(--font-color) !important;
	text-align: start;
	height: 25px!important;
    line-height: 15px!important;
    width: 85px !important;
    padding: 2px 0px !important;
	padding-left: 12px !important;
    margin: 0px !important;
    text-align: start !important;
    font-weight: 400 !important;
	background-color: rgba(254, 222, 0, 0.1);
	border: 1px solid var(--primary);
	border-radius: 4px;
	border-bottom: 1px solid var(--primary)!important;
}
/* ... */

